[gd_scene load_steps=9 format=3 uid="uid://dcicfygjcyngi"]

[ext_resource type="Script" uid="uid://bswg6pxryvvtb" path="res://Skrypty/build_menu.gd" id="1_ykimh"]
[ext_resource type="Texture2D" uid="uid://cs5nj0d41fw2" path="res://Textures/Inventory background.png" id="2_0yqy8"]
[ext_resource type="FontFile" uid="uid://duhgih5yye3lo" path="res://Minecraft.ttf" id="3_eo85c"]
[ext_resource type="Texture2D" uid="uid://cus8117tqhlto" path="res://Textures/Inventory slot.png" id="4_vt1y7"]
[ext_resource type="Texture2D" uid="uid://hfrqn1ab54oh" path="res://Textures/Blocks/Oak Pillar.png" id="5_gccqu"]
[ext_resource type="Texture2D" uid="uid://b1ebtot2rwcbo" path="res://Textures/Blocks/Plank Block Build Button.png" id="6_14yga"]
[ext_resource type="Texture2D" uid="uid://dhkd7ihccvkvm" path="res://Textures/Blocks/Wood Floor Build Button.png" id="7_70la1"]

[sub_resource type="LabelSettings" id="LabelSettings_01ctb"]
font = ExtResource("3_eo85c")
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 1)

[node name="Build Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykimh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -120.0
offset_right = 518.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_0yqy8")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 6.66667
offset_right = 108.0
offset_bottom = 29.6667
text = "BUILD MENU"
label_settings = SubResource("LabelSettings_01ctb")

[node name="Slot 1" type="Sprite2D" parent="NinePatchRect"]
position = Vector2(43.3333, 66.6667)
scale = Vector2(2, 2)
texture = ExtResource("4_vt1y7")

[node name="Oak Wood Pillar" type="Sprite2D" parent="NinePatchRect/Slot 1"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_gccqu")

[node name="Oak Wood Pillar Build Button" type="TextureButton" parent="NinePatchRect/Slot 1"]
offset_left = -17.0
offset_top = -17.0
offset_right = 16.0
offset_bottom = 16.0

[node name="Slot 2" type="Sprite2D" parent="NinePatchRect"]
position = Vector2(123.333, 66.6667)
scale = Vector2(2, 2)
texture = ExtResource("4_vt1y7")

[node name="Plank Block" type="Sprite2D" parent="NinePatchRect/Slot 2"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_14yga")

[node name="Plank Block Build Button" type="TextureButton" parent="NinePatchRect/Slot 2"]
offset_left = -17.0
offset_top = -17.0
offset_right = 16.0
offset_bottom = 16.0

[node name="Slot 3" type="Sprite2D" parent="NinePatchRect"]
position = Vector2(203.333, 66.6667)
scale = Vector2(2, 2)
texture = ExtResource("4_vt1y7")

[node name="Wood Floor" type="Sprite2D" parent="NinePatchRect/Slot 3"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_70la1")

[node name="Wood Floor Build Button" type="TextureButton" parent="NinePatchRect/Slot 3"]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="NinePatchRect/Slot 1/Oak Wood Pillar Build Button" to="." method="_on_oak_wood_pillar_build_button_pressed"]
[connection signal="pressed" from="NinePatchRect/Slot 2/Plank Block Build Button" to="." method="_on_plank_block_build_button_pressed"]
[connection signal="pressed" from="NinePatchRect/Slot 3/Wood Floor Build Button" to="." method="_on_wood_floor_build_button_pressed"]
